Conforms to JDK 21 and ffmasm v0.2.2